# bitflags

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bors.toml  build.rs  spec.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: rust.yml  scorecard.yml
compiletest/: Cargo.toml
compiletest/tests/: tests.rs
examples/: custom_bits_type.rs  custom_derive.rs  fmt.rs  macro_free.rs  manual.rs  manual_bits.rs  manual_flags.rs  manual_flags_partial.rs  serde.rs  serde_compat.rs  zerocopy.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: atomic.rs  bitflags_trait.rs  error.rs  example_generated.rs  external.rs  fmt.rs  internal.rs  iter.rs  iterator.rs  lib.rs  parser.rs  public.rs  serde_support.rs  tests.rs  traits.rs
src/tests/: all.rs  atomic.rs  bitflags_match.rs  bits.rs  complement.rs  contains.rs  difference.rs  empty.rs  eq.rs  extend.rs  flags.rs  fmt.rs  from_bits.rs  from_bits_retain.rs  from_bits_truncate.rs  from_iter.rs  from_name.rs  from_str.rs  intersection.rs  is_all.rs  is_empty.rs  iter.rs  iter_named.rs  match_bitflag.rs  parser.rs  symmetric_difference.rs  union.rs  value_names.rs
test_suite/: Cargo.toml
test_suite/tests/: compiletest.rs  conflicting_trait_impls.rs  external.rs  external_no_std.rs  i128_bitflags.rs  rust2018.rs  serde.rs  u128_bitflags.rs
test_suite/tests/compile-fail/: private_flags.rs  private_flags.stderr
tests/: 128bit.rs  all.rs  arbitrary-redefinition.rs  arbitrary.rs  basic.rs  compile.rs  compiletest.rs  complement.rs  conflicting_trait_impls.rs  difference.rs  empty.rs  eq.rs  extend.rs  external.rs  external_no_std.rs  flags.rs  fmt.rs  from_iter.rs  from_str.rs  i128_bitflags.rs  intersection.rs  redefine_core.rs  redefinition.rs  serde.rs  set_ops.rs  symmetric_difference.rs  tests.rs  u128_bitflags.rs  union.rs  zero.rs
tests/compile-fail/: access_outside_visibility.rs  access_outside_visibility.stderr  bitflags_custom_bits.rs  bitflags_custom_bits.stderr  bitflags_flag_name_empty.rs  bitflags_flag_name_empty.stderr  bitflags_flag_name_non_str.rs  bitflags_flag_name_non_str.stderr  bitflags_match_missing_default.rs  bitflags_match_missing_default.stderr  bitflags_missing_type.stderr  bitflags_missing_value.rs  bitflags_missing_value.stderr  bitflags_pub_const.stderr  bitflags_redefined.rs  bitflags_redefined.stderr  bitflags_trait_custom.rs  bitflags_trait_custom.stderr  bitflags_trait_deprecated.rs  bitflags_trait_deprecated.stderr  redefined.rs  redefined.stderr  unnamed_const.rs  unnamed_const.stderr
tests/compile-pass/: atomic_attribute.rs  bitflags_flag_name.rs  bitflags_multi_flag.rs  bitflags_redefined_value.rs  bitflags_self_in_value.rs  bitflags_trait_bound_flags.rs  bitflags_trait_generic_iter.rs  bitflags_trait_precedence.rs  bitflags_trait_supertrait.rs  bitflags_trait_to_flags.rs  deprecated.rs  doc_alias.rs  empty.rs  flag_name.rs  impl_fmt.rs  (+22 more)
(+40 files in other folders)
