[package]

name = "bitflags"
# NB: When modifying, also modify:
#   1. html_root_url in lib.rs
#   2. number in readme (for breaking changes)
version = "1.0.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
keywords = ["bit", "bitmask", "bitflags", "flags"]
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/bitflags"
homepage = "https://github.com/rust-lang-nursery/bitflags"
documentation = "https://docs.rs/bitflags"
categories = ["no-std"]
description = """
A macro to generate structures which behave like bitflags.
"""

[badges]
travis-ci = { repository = "rust-lang-nursery/bitflags" }

[features]
default = ["example_generated"]
unstable_testing = []
example_generated = []

[dev-dependencies]
# Trick Cargo into testing this crate when we run `cargo test --all`.
bitflags-compiletest = { path = "compiletest" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[workspace]
