[package]

name = "bitflags"
# NB: When modifying, also modify:
#   1. html_root_url in lib.rs
#   2. number in readme (for breaking changes)
version = "1.0.3"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
keywords = ["bit", "bitmask", "bitflags", "flags"]
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/bitflags"
homepage = "https://github.com/rust-lang-nursery/bitflags"
documentation = "https://docs.rs/bitflags"
categories = ["no-std"]
description = """
A macro to generate structures which behave like bitflags.
"""

[badges]
travis-ci = { repository = "rust-lang-nursery/bitflags" }

[features]
default = []
example_generated = []

[package.metadata.docs.rs]
features = [ "example_generated" ]

[workspace]
members = ["test_suite"]
