cargo-features = ["edition"]

[project]
name = "test_suite"
version = "0.0.0"

[features]
unstable = ["compiletest_rs"]

[[test]]
name = "rust2018"
edition = "2018"

[dependencies]
bitflags = { path = "../" }
compiletest_rs = { version = "*", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
